--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "typecheck": "vue-tsc --noEmit",
     "up": "taze major -I",
     "postinstall": "npx simple-git-hooks",
-    "sizecheck": "npx vite-bundle-visualizer"
+    "sizecheck": "npx vite-bundle-visualizer",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@unocss/reset": "^0.51.13",
@@ -29,8 +31,16 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.38.6",
+    "@element-plus/icons-vue": "^2.1.0",
     "@iconify-json/carbon": "^1.1.16",
     "@intlify/unplugin-vue-i18n": "^0.10.0",
+    "@storybook/addon-essentials": "^7.0.12",
+    "@storybook/addon-interactions": "^7.0.12",
+    "@storybook/addon-links": "^7.0.12",
+    "@storybook/blocks": "^7.0.12",
+    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/vue3": "^7.0.12",
+    "@storybook/vue3-vite": "^7.0.12",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@unocss/eslint-config": "^0.51.13",
@@ -41,15 +51,20 @@
     "cross-env": "^7.0.3",
     "cypress": "^12.12.0",
     "cypress-vite": "^1.4.0",
+    "element-plus": "^2.3.4",
     "eslint": "8.39.0",
     "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-storybook": "^0.6.12",
     "https-localhost": "^4.7.1",
     "lint-staged": "^13.2.2",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.9.0",
     "pnpm": "^8.5.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "shiki": "^0.14.2",
     "simple-git-hooks": "^2.8.1",
+    "storybook": "^7.0.12",
     "taze": "^0.10.1",
     "typescript": "^5.0.4",
     "unocss": "^0.51.13",
