--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@unocss/reset": "^0.51.13",
     "@vueuse/core": "^10.1.2",
     "@vueuse/head": "^1.1.26",
+    "inputmask": "^5.0.8",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
@@ -41,6 +42,7 @@
     "@storybook/testing-library": "^0.0.14-next.2",
     "@storybook/vue3": "^7.0.12",
     "@storybook/vue3-vite": "^7.0.12",
+    "@types/inputmask": "^5.0.3",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
     "@unocss/eslint-config": "^0.51.13",
